add main page backend